--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Experiment with jsPsych</title>
     <!-- Include jsPsych libraries -->
-    <link href="https://cdn.jsdelivr.net/npm/jspsych@6.3.1/dist/css/jspsych.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/jspsych@6.3.1/dist/jspsych.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/jspsych@6.3.1/dist/plugins/jspsych-video-button-response.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/jspsych@6.3.1/dist/plugins/jspsych-image-button-response.js"></script>
+    <link rel="stylesheet" href="jspsych-6.1.0/css/jspsych.css",type="text/css"> </link>
+    <link href="css/jspsych.css" rel="stylesheet" type="text/css"></link>
+    <script src="jspsych-6.1.0/jspsych.js"> </script>
+    <script src="jspsych-6.1.0/plugins/jspsych-video-keyboard-response.js"></script>
+    <script src="jspsych-6.1.0/plugins/jspsych-image-button-response.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jspsych@6.3.1/dist/plugins/jspsych-html-button-response.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jspsych@6.3.1/dist/plugins/jspsych-image-keyboard-response.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js"></script> <!-- PapaParse library -->
