--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <script src="jspsych-6.1.0/jspsych.js"> </script>
     <script src="jspsych-6.1.0/plugins/jspsych-video-keyboard-response.js"></script>
     <script src="jspsych-6.1.0/plugins/jspsych-image-button-response.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/jspsych@6.3.1/dist/plugins/jspsych-html-button-response.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/jspsych@6.3.1/dist/plugins/jspsych-image-keyboard-response.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js"></script> <!-- PapaParse library -->
+    <script src="jspsych-6.1.0/plugins/jspsych-html-button-response.js"></script>
+    <script src="jspsych-6.1.0/plugins/jspsych-image-keyboard-response.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.2.0/papaparse.min.js"></script> <!-- PapaParse library -->
 </head>
 <body>
     <script>
