--- a/index.html
+++ b/index.html
@@ -158,8 +158,9 @@
 
             // Save data as CSV
             var saveData = {
-                type: 'html-keyboard-response',
-                stimulus: 'You are all done! Press any key to finish.',
+                type: 'fullscreen',
+                message: "",
+                button_label: "You're all done! Click here to finish"
                 on_finish: function() {
                     jsPsych.data.get().localSave('csv', 'experiment_data_subject_' + subjectNumber + '_order_' + orderFile + '.csv');
                 }
