--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         }
 
         // 2. Set the correct CSV file based on the order value
-        const csvFilePath = `central_data_${orderFile}.csv`;  // Dynamically select the CSV file
+        const csvFilePath = `https://ebreitfeld.github.io/CourtneyThesis/central_data_${orderFile}.csv`;  // Dynamically select the CSV file
         
         // 3. Load and parse the selected CSV data asynchronously using PapaParse
         Papa.parse(csvFilePath, {
