--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     choices: jsPsych.NO_KEYS,  // No keypress required
                     response_ends_trial: false, // Don't require a response to end the trial
                     trial_ends_after_audio: true,
-                    prompt: "",  // No prompt needed for training trials
+                    //prompt: "",  // No prompt needed for training trials
                     on_start: function() {
                         // Play the audio when the trial starts
                         if (trialData.audio_path) {
