--- a/index.html
+++ b/index.html
@@ -99,6 +99,8 @@
                     choices: ['Click here'],
                     button_html: `<button class="jspsych-btn" 
                         style="position: absolute; 
+                        width: ${trialData.button_width}px;
+                        height: ${trialData.button_height}px;
                         top: ${trialData.button_position_y}px; 
                         left: ${trialData.button_position_x}px;">Click here</button>`,
                     response_ends_trial: true,
