--- a/index.html
+++ b/index.html
@@ -103,6 +103,11 @@
                         height: ${trialData.button_height}px;
                         top: ${trialData.button_position_y}px; 
                         left: ${trialData.button_position_x}px;">Click here</button>`,
+                        additional_css: `
+                            .custom-btn {
+                                opacity: 0;
+                                }
+                            `,
                     response_ends_trial: true,
                     stimulus_height: 720,
                     maintain_aspect_ratio: true,
