--- a/index.html
+++ b/index.html
@@ -102,10 +102,12 @@
                         width: ${trialData.button_width}px;
                         height: ${trialData.button_height}px;
                         top: ${trialData.button_position_y}px; 
-                        left: ${trialData.button_position_x}px;">Click here</button>`,
+                        left: ${trialData.button_position_x}px;"></button>`,
                         additional_css: `
-                            .custom-btn {
+                            .jspsych-btn {
                                 opacity: 0;
+                                background: none;
+                                border: none;
                                 }
                             `,
                     response_ends_trial: true,
