--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         const jsPsych = initJsPsych({
             on_finish: function() {
                 console.log("Experiment complete!");
-                document.body.innerHTML = '<div style="text-align:center; margin-top:30px;"><h2>Thank you for participating!</h2><p>The experiment is now complete.</p></div>';
+                document.body.innerHTML = '<div style="text-align:center; margin-top:30px;"><h2>Great job!</h2><p>You are all done.</p></div>';
             }
         });
 
