--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                         box-shadow: none !important;"></button>`,
                     css_classes: ['custom-trial'],
                     response_ends_trial: true,
-                    stimulus_height: 720,
+                    stimulus_height: "100%",
                     maintain_aspect_ratio: true,
                     on_start: function(trial) {
                         if (trialData.audio_path) {
