--- a/index.html
+++ b/index.html
@@ -13,6 +13,15 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.2.0/papaparse.min.js"></script>
     <script src="https://unpkg.com/@jspsych-contrib/plugin-pipe"></script>
     <link href="https://unpkg.com/jspsych@7.3.3/css/jspsych.css" rel="stylesheet" type="text/css" />
+        <style>
+        body, html {
+            background-color: black !important;
+            color: white !important;
+        }
+        #jspsych-content {
+            background-color: black !important;
+        }
+    </style>
 </head>
 <body>
     <script>
